--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.flutter.spa">
+    package="com.yuyuspahk.yuyuspa">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
@@ -58,7 +58,7 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:host="vistatravel.page.link"/>
+                <data android:host="yuyuspa.page.link"/>
                 <data android:scheme="https"/>
             </intent-filter>
         </activity>
@@ -70,7 +70,7 @@
         <!-- HEADS UP NOTIFICATION FOR ANDROID -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="spa" />
+            android:value="yuyuspa" />
         <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
           android:resource="@drawable/app_icon" />
     </application>
