--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = SPA;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.flutter.spa;
+PRODUCT_BUNDLE_IDENTIFIER = com.yuyuspahk.yuyuspa;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
