url issue is solved.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -98,5 +98,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<!-- Allows app to access not only https but also http websites like terms and conditions and privacy policy -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+  		<key>NSAllowsArbitraryLoads</key>
+    	<true/>
+	</dict>
 </dict>
 </plist>
