update firebase config files

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>154790314705-2k090ct47g8a46g6g44p42jr6jmvefa5.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.154790314705-2k090ct47g8a46g6g44p42jr6jmvefa5</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>154790314705-jbemdun30in6srmc9nvh6u1qs623rpeg.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBo48R48RNu9HKeMPOfTLk0uHDAp3_A7r0</string>
 	<key>GCM_SENDER_ID</key>
